Fixed the property path calculation in situations where the link.index variable gets set during the search. #32874

Closed
opened 2012-10-14 00:12:10 +02:00 by Florian Köberle · 3 comments

%%%This patch fixes the following bug:

It can happen that a PointerProperty has the wrong calculated data path and is thus not animatable via UI.
Steps to reproduce:

  1. Install the "m3addon" - a m3 importer/exporter addon for Blender:
    https://github.com/flo/m3addon/
  2. In the scene properties tab open the "M3 Forces" tab and click on "+"
  3. Open the "M3 Boundings" panel and press i while hovering the min property in the panel.

Result without patch:
Could not insert keyframes, as RNA Path is invalid for the given ID (ID = SCScene, Path = m3_boundings- [x].minBorder)%%%

%%%This patch fixes the following bug: It can happen that a PointerProperty has the wrong calculated data path and is thus not animatable via UI. Steps to reproduce: 1. Install the "m3addon" - a m3 importer/exporter addon for Blender: https://github.com/flo/m3addon/ 2. In the scene properties tab open the "M3 Forces" tab and click on "+" 3. Open the "M3 Boundings" panel and press i while hovering the min property in the panel. Result without patch: Could not insert keyframes, as RNA Path is invalid for the given ID (ID = SCScene, Path = m3_boundings- [x].minBorder)%%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%applied r52002.%%%

%%%applied r52002.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender-addons#32874
No description provided.