patch [#32874] Fixed the property path calculation in situations where the link.index variable gets set during the search. From Florian K?\246berle